2nd Attemot at fixing logo on mobile screens

--- a/assets/css/bootsnav.css
+++ b/assets/css/bootsnav.css
@@ -1349,7 +1349,7 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
     
     nav.navbar.bootsnav.navbar-fixed .logo-scrolled{
         display: block !important;
-        padding-bottom: 10px;
+        padding-bottom: -10px;
     }
 
     nav.navbar.bootsnav.navbar-fixed .logo-display{
